# eu

./: .env.example  .gitignore  docker-compose.yml  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: build.yml  release.yml
app/: app.config.ts  app.vue  error.vue
app/assets/css/: main.css
app/components/: LangSwitcher.vue  ModalLicence.vue  ModalProfil.vue  SignaturePad.vue
app/components/ui/: UiButton.vue  UiInput.vue  UiTextarea.vue  UiToast.vue
app/composables/: useAnalysis.ts  useBodyScrollLock.ts  useCategories.ts  useFactures.ts  useLang.ts  useLicence.ts  useParametres.ts  usePdfFiller.ts  usePersonnes.ts  useScrollAnimation.ts  useSeo.ts  useTheme.ts  useToast.ts
app/db/: schema.ts
app/layouts/: default.vue  home.vue
app/locales/: bg.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fr.json  hr.json  hu.json  it.json  lt.json  lv.json  mt.json  nl.json  pl.json  pt.json  ro.json  sk.json  sl.json  sv.json
app/middleware/: admin.ts
app/pages/: [...all].vue  index.vue
app/plugins/: database.client.ts  gsap.client.ts  lang.client.ts  licence.client.ts  theme.client.ts
public/: robots.txt
server/utils/: mailer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
