[package]
name = "eu2"
version = "1.0.0"
description = "RCAM / Article 72§3 — Décomptes Médicales CE"
authors = ["Scudyweb"]
license = "MIT"
edition = "2021"

[lib]
name = "eu2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[features]
default = ["desktop"]
desktop = ["tauri/tray-icon"]
